[package]
name = "frpc-tunnel-manager"
version = "0.1.0"
description = "FRPC Tunnel Manager"
authors = ["dalong"]
edition = "2021"

[lib]
name = "frpc_tunnel_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
thiserror = "2"
tokio = { version = "1", features = ["process", "sync", "io-util", "macros", "rt-multi-thread", "time"] }
toml = "0.9"
zip = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData"] }
